# lan_chat

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
assets/macos/: Info.plist
src/: app.rs  audio.rs  lib.rs  main.rs  net.rs  protocol.rs  theme.rs
tests/: audio_e2e.rs  multicast.rs
