[package]
name = "lan_chat"
version = "0.1.0"
edition = "2021"
description = "LAN IPv6-only multicast chat and voice app with a GUI"

[dependencies]
eframe = "0.35"
egui = "0.35"
socket2 = { version = "0.6", features = ["all"] }
cpal = "0.18"
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
gethostname = "1.1"
rand = "0.10"
log = "0.4"
env_logger = "0.11"
postcard = { version = "1", features = ["use-std"] }
if-addrs = "0.15.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
