[package]
name = "lan_chat"
version = "0.1.0"
edition = "2021"
description = "LAN IPv6-only multicast chat and voice app with a GUI"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Default features minus `accesskit` (incompatible with android native-activity).
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.35"
socket2 = { version = "0.6", features = ["all"] }
cpal = "0.18"
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
gethostname = "1.1"
rand = "0.10"
log = "0.4"
env_logger = "0.11"
postcard = { version = "1", features = ["use-std"] }
if-addrs = "0.15.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["wayland", "x11"] }

# Android: entry point, logging, and JNI for the Wi-Fi MulticastLock.
[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["android-native-activity"] }
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
jni = "0.21"
ndk-context = "0.1"

[package.metadata.android]
package = "network.harkin.lanchat"
apk_name = "lan_chat"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
# 26 (Android 8.0): required by cpal's AAudio backend (libaaudio).
min_sdk_version = 26
# Kept within the pinned CI NDK's (r25c) max platform level so cargo-apk can
# find a usable SDK platform; 30 is also cargo-apk's own default target.
target_sdk_version = 30

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_WIFI_STATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.CHANGE_WIFI_MULTICAST_STATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[package.metadata.android.application]
label = "LAN Chat"

[profile.release]
opt-level = 3
